# ctodo

./: CMakeLists.txt  LICENSE  README  README.md  config.h.in  ctodo.c  error.c  error.h  file.c  file.h  stream.c  stream.h  sync.c  sync.h  task.c  task.h
src/: config.h.in  ctodo.c  edit.c  edit.h  error.c  error.h  file.c  file.h  stream.c  stream.h  sync.c  sync.h  task.c  task.h  wedit.c  wedit.h
